@@ -28,6 +28,7 @@
 * SagePay gateway: Per-transaction 3D-secure selection [ExxKA]
 * Barclays ePDQ: Handle incorrectly encoded response [jordanwheeler, aprofeit]
 * Orbital: Bug fixes; add CustomerEmail, Retry Logic, Managed Billing, and Destination Address [juicedM3
+* Distinguish invalid vs empty issue_numbers on CreditCards [drasch]
 
 == Version 1.32.1 (April 4, 2013)
 
